--- a/等时圈-By刘子晨.htm
+++ b/等时圈-By刘子晨.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <title>等时圈-By刘子晨</title>
-    <link rel="stylesheet" href="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/demo-center.css">
+    <link rel="stylesheet" href="demo-center.css">
     <style type="text/css">
         html,
         body,
@@ -17,13 +17,13 @@
             width: 4rem;
         }
     </style>
-    <link rel="stylesheet" href="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/jquery.range.css">
+    <link rel="stylesheet" href="jquery.range.css">
 <style type="text/css">.amap-container{cursor:url(https://webapi.amap.com/theme/v1.3/openhand.cur),default;}.amap-drag{cursor:url(https://webapi.amap.com/theme/v1.3/closedhand.cur),default;}</style></head>
 
 <body>
     <div id="container" style="position: relative; background: rgb(242, 242, 242);" class="amap-container"><object style="display: block; position: absolute; top: 0; left: 0; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;" type="text/html" data="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/%E6%97%A0%E6%A0%87%E9%A2%98.htm"></object><div class="amap-maps"><div class="amap-drags" style=""><div class="amap-layers" style="transform: translateZ(0px);"><div class="amap-markers" style="position: absolute; z-index: 120; top: 236px; left: 960px;"><div class="amap-marker" style="top: -89px; left: -61px; z-index: 100; transform: rotate(0deg); transform-origin: 9px 31px 0px; display: block;"><div class="amap-icon" style="position: absolute; overflow: hidden; width: 19px; height: 33px; opacity: 1;"><img style="width: 19px; height: 33px; top: 0px; left: 0px;" src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/mark_bs.png"></div></div></div><canvas class="amap-layer" width="1920" height="472" style="position: absolute; z-index: 0; top: 0px; left: 0px; display: block; height: 472px; width: 1920px;"></canvas><canvas class="amap-layer amap-vectors" style="position: absolute; z-index: 110; top: 0px; left: 0px; display: block;" width="1920" height="472"></canvas><canvas class="amap-labels" draggable="false" width="1920" height="472" style="position: absolute; z-index: 99; height: 472px; width: 1920px; top: 0px; left: 0px;"></canvas></div><div class="amap-overlays" style=""></div></div></div><div style="display: none;"></div><div class="amap-controls"></div><a class="amap-logo"><img src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/logo@1x.png"></a><div class="amap-copyright" style="display: none; visibility: hidden;"><!--v1.4.16--> © 2024 AutoNavi <span class="amap-mcode"></span></div></div>
     <div class="input-card" style="width:30rem;">
-        <h4 style="color:black">Mapbox等时圈、高德公交到达圈查询-By刘子晨</h4>
+        <h4 style="color:black">等时圈查询-By刘子晨</h4>
         <div class="input-item">
             <div class="input-item-prepend"><span class="input-item-text">出发位置</span></div>
             <input id="lnglat" type="text" value="118.351383,32.301764">
@@ -57,10 +57,10 @@
             <input type="button" class="btn" value="MapShaper" onclick="javascript:outputshp()" style="width:6rem;">
         </div>
     </div>
-    <script src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/maps"></script>
-    <script src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/jquery-1.9.1.js"></script>
-    <script src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/jquery.range.js"></script>
-    <script src="%E7%AD%89%E6%97%B6%E5%9C%88-By%E5%88%98%E5%AD%90%E6%99%A8_files/FileSaver.js"></script>
+    <script src="maps"></script>
+    <script src="jquery-1.9.1.js"></script>
+    <script src="jquery.range.js"></script>
+    <script src="FileSaver.js"></script>
     <script>
         var accessToken = 'pk.eyJ1IjoibmkxbzEiLCJhIjoiY2t3ZDgzMmR5NDF4czJ1cm84Z3NqOGt3OSJ9.yOYP6pxDzXzhbHfyk3uORg';
 
